0.9.94:
-Fix: Tint items in the Replay Gain scanner red while calculating Raply Gain
-Fix: Make the Replay Gain scanner skip file with calculated tags
-Fix: Ensure items in the file list and Replay Gain file list get redrawn after an update
-Fix: Hide open directory dialog before scanning the directory to show the progressbar
-Fix: Don't crash when deleting file list items

0.9.93 (1.0.0 rc1):
-Add: Video formats for ffmpeg and mplayer
-Add: German translation
-Change: Re-enable the CD ripper (using paranoia again)
-Change: Save frames properly when generating cuesheet files
-Fix: Retry conversion if file output size is too small
-Fix: Delete temp files properly if a conversion pipe failed
-Fix: alac extensions
-Fix: Some bugs in the CD ripper dialog
-Fix: Drag'n'drop directories wouldn't work
-Fix: Make shortcuts work

0.9.92 (1.0.0 beta3):
-Add: User defined command line arguments for lame and some new plugins
-Add: User defined command to execute after a file has been converted
-Add: Create action menus for the file manager
-Add: Flake plugin
-Add: TwoLame plugin (Warning: Corrupted a file while testing)
-Add: Monkey's Audio Compressor plugin
-Add: WavPack and Wv Gain plugin
-Add: shorten plugin
-Add: MusePack codec and replaygain plugins
-Change: Disable CD ripper, due to some incompatibilitys with kde (still accessible through the command line though)
-Change: Create temp files in the kde-user temp dir
-Change: Remove partially converted files on abort or fail
-Change: Remove old KDE4 action menus created by soundKonverter 0.3
-Fix: Remove audio/mpeg mime type from mp1 and mp2 codecs in the ffmpeg and mplayer plugins because it would conflict with mp3
-Fix: soundKonverter would get stuck when trying to add replaygain (add argument for mp3gain/aacgain to lower gain to avoid clipping)
-Fix: soundkonverter would crash when trying to rip a cd or add files if the options widget can't be initialized correctly